[FIX] Scrollbar problems

--- a/app/[locale]/shutdown/page.module.css
+++ b/app/[locale]/shutdown/page.module.css
@@ -10,12 +10,12 @@
   width: 100vw;
 }
 
-:global(html),
-:global(body) {
-  background: #000;
-  scrollbar-gutter: auto;
+.shutdownNoScroll {
   overflow: hidden;
+  scrollbar-gutter: auto;
+  background: #000;
 }
+
 
 .crtOverlay,
 .vignette,
